# trackingStudio

./: .gitignore  99700c75-980b-438a-a33e-f49bf16d126a  CLAUDE.md  IMPROVEMENTS.md  README.md  client_example.py  deepsort_tracker.py  main.py  pyproject.toml  requirements.txt  run.py  video_processor.py
context/: PROJECT_PROGRESS.md  PROJECT_STRUCTURE_UPDATE.md  SHOT_DETECTION_IMPLEMENTATION.md
trackstudio/: __init__.py  run.py
trackstudio/api/: __init__.py  main.py
trackstudio/models/: __init__.py
trackstudio/processors/: __init__.py  cross_camera_merger.py  deepsort_tracker.py  video_processor.py
trackstudio/utils/: __init__.py  shot_detector.py
