[tool.poetry]
name = "trackstudio"
version = "1.0.0"
description = "Basketball video analysis system with AI shot detection"
authors = ["TrackStudio Team <dev@trackstudio.ai>"]
readme = "README.md"
packages = [{include = "trackstudio"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
opencv-python = "^4.8.1"
ultralytics = "^8.3.0"
numpy = "^1.24.3"
pillow = "^10.0.1"
pydantic = "^2.5.0"
python-json-logger = "^2.0.7"
aiofiles = "^23.2.0"
celery = "^5.3.4"
redis = "^5.0.1"

# DeepSORT tracking dependencies
deep-sort-realtime = "^1.3.2"
scipy = "^1.11.4"
filterpy = "^1.4.5"

# Shot detection dependencies
cvzone = "^1.5.6"
scikit-image = "^0.19.3"
lapx = "^0.5.2"  # Modern replacement for lap with better compatibility

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
dev = "trackstudio.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100